categorize hz and jmx for integ tests